# blueblack

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md  config.yaml
configs/dark_mode/: gtk3-theme.sh  notify.sh
configs/light_mode/: gtk3-theme.sh  notify.sh
src/: script_runner.py  sunrise_sunset.py
src/blueblack/: __init__.py  config_loading.py  datetime_utils.py  fetcher.py  local_logging.py  main.py  project.py  resolver.py  script_runner.py  states.py  sun_times.py  sun_trans_times.py  sunrise_sunset.py  suntimes_fetcher.py  transitions.py  user.py
systemd/: blueblack.service
tests/: config_loading_test.py  fetcher_test.py  script_runner_test.py  sun_times_test.py  sun_trans_times_test.py  test_times.py  transitions_test.py  user_test.py
