[tool.poetry]
name = "blueblack"
version = "0.1.0"
description = "Automatic light/dark mode transitions based on location"
authors = ["Stefanos Mitropoulos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
idna = "3.7"
iniconfig = "2.0.0"
packaging = "24.0"
pluggy = "1.5.0"
pyyaml = "6.0.1"
requests = "2.31.0"
urllib3 = "2.2.1"
xdg-base-dirs = "6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
