[tool.poetry]
name = "blueblack"
version = "1.0.1"
description = "Automatic light/dark mode transitions based on location"
authors = ["Stefanos Mitropoulos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
idna = "3.7"
iniconfig = "2.0.0"
packaging = "24.0"
pluggy = "1.5.0"
pyyaml = "6.0.1"
requests = "2.31.0"
urllib3 = "2.2.1"
xdg-base-dirs = "6.0.1"
jsonschema = "^4.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
