[tool.poetry]
name = "blueblack"
version = "1.0.4"
description = "Automatic light/dark mode transitions based on location"
authors = ["Stefanos Mitropoulos", "Solo E.V. (0xarch)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
xdg-base-dirs = "^6.0.1"
astral = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
